# exchange-grade-order-matching

./: .gitignore  Makefile  README.md  auto-trade  docker-compose.yml  package-lock.json  package.json
proto/: engine.proto
services/engine/engine/: Cargo.toml  Dockerfile  build.rs
services/engine/engine/data/: snapshot.json  wal.jsonl
services/engine/engine/src/: main.rs  order_book.rs  wal.rs
services/gateway/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/gateway/src/: index.ts
services/gateway/src/grpc/: engineClient.ts
services/gateway/src/http/: server.ts
services/gateway/src/ws/: server.ts
services/ui/: Dockerfile
services/ui/src/app/: page.tsx
services/ui/src/components/: DebugPanel.tsx  DepthCard.tsx  MarketHeader.tsx  MarketSubscribeCard.tsx  OrderEntryCard.tsx  PriceChartCard.tsx  TopOfBookCard.tsx  TradeTapeCard.tsx
services/ui/src/hooks/: userMarketPolling.ts
services/ui/src/lib/: gateway.ts  types.ts
