[package]
name = "engine"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[build-dependencies]
tonic-build = "0.11"
